增加分页功能 删除部分测试页面

--- a/_config.yml
+++ b/_config.yml
@@ -85,8 +85,8 @@ defaults:
       layout: single
 
 # Outputting
-paginate: 5
-paginate_path: /page:num/
+paginate: 10 
+# paginate_path: /page:num/
 timezone: Asia/Shanghai
 
 # Plugins (previously gems:)
