添加部分导航栏; 增加作者定位

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,6 +2,7 @@ paS:
   name: "孙鹏飞"
   bio: "Web Developer"
   avatar: "https://cdn.jsdelivr.net/gh/SSSpaS/my-image-hosting/pom-pom-purin-avatar.jpg"
+  location: "中国"
   links:
     - label: "Email"
       icon: "far fa-envelope"
